[#10153] result page collapsable box ui issues (#10174)
* Clicking on the text collapses the box

When grouped by questions, clicking on the text collapses the box.

* The clickable parts of the boxes change the cursor to a pointer

The clickable parts of the boxes change the cursor to a pointer

* Moved styles from global file to specific scss file

Moved styles from global file to specific scss file

* Clicking on the text collapses the box

Clicking on the text collapses the box.

Added method in instructor-session-result-question-view.component.ts file.

The method expanding box after user clicks in the text, however when a user clicks on the more button, the box don't collapse.

* Changed files for pass tests

Changed files for pass tests

* Clicking on the description expand and collapse the box

Clicking on the description expand and collapse the box

* Fixed error on clicking on the text

Fixed error on clicking on the text.

--- a/src/web/app/pages-instructor/instructor-session-result-page/instructor-session-result-question-view.component.scss
+++ b/src/web/app/pages-instructor/instructor-session-result-page/instructor-session-result-question-view.component.scss
@@ -1,3 +1,9 @@
 .margin-bottom-15px {
   margin-bottom: 15px;
 }
+
+// The clickable parts of the boxes should change the cursor to a pointer
+
+.card-header {
+  cursor: pointer;
+}
